# Discord-Guardian

./: .env.example  README.md  pyproject.toml  setup.cfg
infra/: docker-compose.yml
policies/: moderation.template.yaml  moderation.yaml
src/mcp_server/: __init__.py  main.py
src/modbot/: __init__.py  __main__.py
src/modbot/config/: settings.py
src/modbot/discord/: client.py  events.py
src/modbot/discord/commands/: __init__.py  appeal.py  appeals_review.py  mod_config.py  mod_history.py  mod_llm_ping.py  mod_metrics.py  mod_rules.py  mod_status.py
src/modbot/domain/moderation/: interfaces.py
src/modbot/domain/moderation/actions/: __init__.py  ask_llm.py  delete_message.py  escalate.py  helpers.py  registry.py  runner.py  timeout.py  warn.py
src/modbot/domain/policy/: formatter.py  loader.py  models.py
src/modbot/infrastructure/: mcp_client.py
src/modbot/infrastructure/logging/: structured_logging.py
src/modbot/infrastructure/persistence/: action_repository.py  appeals_repository.py  db_core.py  migrations.py
src/modbot/infrastructure/providers/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py
src/modbot/infrastructure/providers/toxicity/: __init__.py  detoxify.py  factory.py  neutral.py  perspective.py
src/modbot/services/: escalation_service.py  moderation_pipeline.py  provider_factory.py
src/modbot/utils/: __init__.py  channel_utils.py  decorators.py  format_utils.py
storage/: mod.db
