[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-guardian"
version = "0.1.0"
description = "Discord Guardian — AI‑powered moderation with MCP tooling"
authors = [ { name = "AaronProbha18" } ]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "discord-py>=2.3.2",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "PyYAML>=6.0.1",
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "structlog>=24.1.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.2",
    "openai>=1.25.0",
    "fastmcp>=0.1.0", 
]

[project.optional-dependencies]
dev = ["uvicorn"]
ai = ["detoxify", "torch"]
llm = [
  "openai>=1.30.0",
  "anthropic>=0.30.0",
  "google-generativeai>=0.7.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["modbot*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
modbot = ["py.typed", "**/*.yaml"]

[project.scripts]
modbot = "modbot.__main__:main"
